# psvWave

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile.dev  LICENSE  MANIFEST.in  README.md  _version.py  build_docker_images.sh  deterministicTest.cpp  environment.yml  fdWaveModel.cpp  fdWaveModel.h  genindex.html  index.html  kernel.py  main.cpp  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  set_env.sh  setup.cfg  setup.py  typical-workflow.html  velocityModel.py
_modules/: index.html
_sources/: index.rst.txt
_sources/cpp/: index.rst.txt
_sources/cpp/fdmodel/: index.rst.txt
_sources/python/: index.rst.txt
_sources/python/fdmodel/: attributes.rst.txt  index.rst.txt  methods.rst.txt
_static/: add_class.js  documentation_options.js
cpp/: configuration.html  index.html  miscellaneous.html
cpp/fdmodel/: index.html
docs/: fdwavemodel.class.configuration-file.html  fdwavemodel.class.html  fdwavemodel.class.simulation_methods.html  genindex.html  index.html  miscellaneous.methods.html  objects.inv  search.html  searchindex.js  typical-workflow.html
docs-source/: build_documentation.sh
docs-source/source/: conf.py  fdwavemodel.class.simulation_methods.rst  index.rst  miscellaneous.methods.rst  typical-workflow.rst
docs-source/source/_static/: add_class.js
docs-source/source/cpp/: fdwavemodel.class.methods.rst  fdwavemodel.class.rst  index.rst  miscellaneous.methods.rst  miscellaneous.rst
docs-source/source/cpp/fdmodel/: attributes.rst  configuration.rst  index.rst
docs-source/source/doxygen/: Doxyfile
docs-source/source/python/: configuration.rst  index.rst
docs-source/source/python/fdmodel/: index.rst  methods.rst
docs/_sources/: fdwavemodel.class.configuration-file.rst.txt  fdwavemodel.class.rst.txt  fdwavemodel.class.simulation_methods.rst.txt  index.rst.txt  typical-workflow.rst.txt
marmousi/: marmousi.webm
notebooks/: Full-waveform inversion using psvWave.ipynb  L-BFGS FWI.ipynb  Notebook 2 - Full-waveform inversion using psvWave.ipynb  Simulating Marmousi.ipynb
psvWave/: __init__.py
pyWave/: __init__.py  _version.py
python/: configuration.html  index.html
python/fdmodel/: attributes.html  index.html  methods.html
scripts/: data.py  kernel.py  pyWaveTest.py  velocityModel.py  velocityModelStart.py  velocityModelTarget.py  visualize_kernels.py
src/: MetalOperations.cpp  MetalOperations.hpp  calculateKernel.cpp  contiguous_arrays.cpp  contiguous_arrays.h  deterministicTest.cpp  deterministicTestMPI.cpp  fdModel.cpp  fdModel.h  fdWaveModel.cpp  fdWaveModel.h  forward-acoustic.cpp  forward-elastic-blob.cpp  forward-elastic.cpp  forwardObservedData.cpp  generateSynthetics.cpp  main.cpp  model.cpp  model.h  ops.metal  propagator.cpp  propagator.h  psvWave.cpp  pyWave.cpp  pyWave_cpp.cpp  setup.cpp  setup.h  shot.cpp  shot.h  waveSimulation.cpp
src/forward-psv/: experiment.cpp  experiment.h  fwiExperiment.cpp  fwiExperiment.h  fwiModel.cpp  fwiModel.h  fwiPropagator.cpp  fwiPropagator.h  fwiShot.cpp  fwiShot.h  model.cpp  model.h  propagator.cpp  propagator.h  shot.cpp  shot.h
src/legacy/: forward-acoustic-legacy.cpp  forward-elastic-blob.cpp  forward-elastic-legacy.cpp  forward-elastic.cpp
src/misc/: functions.cpp  functions.h
src/tests/: fdKernel.cpp  fdTest.cpp  fdTest.py
src/visualization/: fdTest.py  kernel.py  plotField.py  seismogram.py  seismogramAdjointSource.py  source.py  wavefield.py  wavefieldAnimation.py  wavefieldAnimationOverlay.py  wavefieldOverlay.py  wavefieldOverlayAdjoint.py
tests/: adjoint_test.cpp  basis_function_test.cpp  benchmark_gpu.cpp  forward_test.cpp  kernel_on_background_test.cpp  make_animation.py  mpi_timing_tests.txt  pyWaveTest.py  test_constructor.cpp  test_constructor_comparison.cpp  test_copy_constructor.cpp  test_file_constructor.cpp  test_variable_constructor.cpp  timing_tests.txt  xcor_test.cpp
tests/python/: test_compilation.py  test_copy.py  test_descent.py
tests/test_configurations/: default_testing_configuration.ini  forward_configuration.ini  forward_configuration_4_sources many_receivers.ini  forward_configuration_4_sources.ini
tests/test_setup/: 500by500_configuration.ini  de_starting.txt  de_target.txt  vp_starting.txt  vp_target.txt  vs_starting.txt  vs_target.txt  xcor_configuration.ini
